[aliases]
release = sdist bdist_wheel
test = pytest

[metadata]
name = mypackage
url = project URL
project_urls = 
description = short description of the project
long_description = file: README.md
long_description_content_type = text/markdown
author = Name of Author
author_email = Email of author
maintainers = Name of maintainers
maintainers_email = Email of maintainers
classifiers =
    Development Status :: 4 -Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.10
packages = find:
include_package_data = True
install_requires =
tests_require = 
    pycodestyle
    pytest


[tool:pytest]
testpaths = tests

python_files =
    test_*.py
    *_test.py
    tests.py
  
